syntax = "proto3";

package salvo;

// Capture all Environment variables required for the benchmark
message EnvironmentVars {
  // Specify the IP version for tests
  enum TestIpVersion {
    IPV_UNSPECIFIED = 0;
    IPV_V4ONLY = 1;
    IPV_V6ONLY = 2;
    IPV_ALL = 3;
  }

  TestIpVersion test_version = 1;

  // Controls whether envoy is placed between the nighthawk client and server
  string envoy_path = 2;

  // Specify the output directory for nighthawk artifacts
  // eg: "/home/user/test_output_path"
  string output_dir = 3;

  // Specify the directory where external tests are located
  // eg: "/home/user/nighthawk_external_tests"
  string test_dir = 4;

  // Additional environment variables that may be needed for operation
  map<string, string> variables = 5;
}
